added task and task completed css

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*
 Description: Minimal styling for ToDo list.
-Author: Iama Goodstudent
-Email: iama.goodstudent@student.curtin.edu
+Author: Emerald Golightly 
+Email: emerald.golightly@student.curtin.edu
 */
 
 body {
